syntax = "proto3";

option go_package = "pkg/grpc";

package twitter;

service TwitterService {
  rpc Health (HealthRequest) returns (HealthResponse);
  rpc CountAuthors (CountAuthorsRequest) returns (CountAuthorsResponse);
}

message HealthRequest {}

message HealthResponse {
  string message = 1;
}

message CountAuthorsRequest {}

message CountAuthorsResponse {
  int64 count = 1;
}
